@@ -2,5 +2,6 @@ ADD_SUBDIRECTORY(graphicsview)
 ADD_SUBDIRECTORY(qdbus)
 ADD_SUBDIRECTORY(tutorial)
 ADD_SUBDIRECTORY(widgets)
+ADD_SUBDIRECTORY(itemviews)
 
 
